--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.5"
 
-install: python setup.py install
+install: pip install .
 script: nosetests
 
 notifications:
