--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,15 @@ language: python
 python:
 - '3.5'
 
-install: pip install .
+env:
+  global:
+    - VERSION_BASE='2016.12'
+
+install:
+  - export VERSION="${VERSION_BASE}.${TRAVIS_BUILD_NUMBER}"
+  - find ${TRAVIS_BUILD_DIR} -type f -print0 | xargs -0 sed -i "s/0.0.dev/${VERSION}/g"
+  - pip install .
+
 script: nosetests
 
 deploy:
