CI autodeploy feature

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ install:
 
 script: nosetests
 
+after_script:
+  - if [ "$TRAVIS_BRANCH" == "release" ]; then git tag ${VERSION}; git push --tags -q https://mkorman9@${GITHUB_TOKEN}@github.com/mkorman9/framepy; fi
+
 deploy:
   provider: pypi
   user:
